...
  private fun getParcelFileDescriptor(filePath: String): ParcelFileDescriptor? {
    if (filePath.startsWith("/")) {
      return ParcelFileDescriptor.open(File(filePath), ParcelFileDescriptor.MODE_READ_ONLY)
    }
    val uri = Uri.parse(filePath)
    when {
      filePath.startsWith("content://") && uri.scheme == ContentResolver.SCHEME_CONTENT ->
        return reactApplicationContext.contentResolver.openFileDescriptor(uri, "r")
      filePath.startsWith("file://") && uri.scheme == ContentResolver.SCHEME_FILE &&
        (uri.authority.isNullOrEmpty() || uri.authority == "localhost") &&
        uri.path?.startsWith("/") == true ->
        return ParcelFileDescriptor.open(File(uri.path!!), ParcelFileDescriptor.MODE_READ_ONLY)
      else -> throw ThumbnailException("UNSUPPORTED_URI", "Unsupported URI for file $filePath; use an absolute path, file:// URI or content:// URI")
...
